# oracle-forge-data-agent

./: .env.example  .gitignore  README.md  app.py
agent/: AGENT.md  context_loader.py  main.py
agent/mcp/: tools.yaml
dab_runs/: batch1_summary.json
docs/interim/: 02_infrastructure_status.md  Interim Report_ The Oracle Forge of Data Agent.md
docs/trp/: TRP1 Challenge Week 8-9_ The Oracle Forge of Data Agent.md  TRP1 Week 8-9 Practitioner Manual_ The Oracle Forge of Data Agent.md
eval/: README.md  config.yaml  validate_outputs.py
eval/scores/: score_log.jsonl  trace_summary.jsonl
kb/architecture/: CHANGELOG.md  MEMORY.md  README.md  architecture_system_overview.md  claude_autodream.md  claude_code_memory.md  claude_memory_layers.md  claude_tool_scoping.md  kb_v1_architecture.md  openai_agent_context.md  openai_six_layers.md  openai_table_enrichment.md  oracle_forge_mapping.md  (+1 more)
planning/: sprint_01_inception.md  sprint_01_mob_approval.md  sprint_01_operations.md
probes/: README.md  category_1_multi_db_routing.md  category_2_ill_formatted_keys.md  category_3_unstructured_text.md  category_4_domain_knowledge.md  probes.md  run_probes.py
results/: README.md
signal/: community_log.md  engagement_log.md  resource_acquisition.md
utils/: README.md  __init__.py  benchmark_harness_wrapper.py  conftest.py  join_key_resolver.py  multi_pass_retrieval.py  pyproject.toml  schema_introspector.py
utils/tests/: test_benchmark_harness_wrapper.py  test_context_loader.py  test_join_key_resolver.py  test_multi_pass_retrieval.py  test_schema_introspector.py
(+81 files in other folders)
