[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-forge-utils"
version = "0.1.0"
description = "Utility modules for the Oracle Forge data agent"
requires-python = ">=3.9"

[tool.setuptools]
py-modules = [
    "benchmark_harness_wrapper",
    "join_key_resolver",
    "multi_pass_retrieval",
    "schema_introspector",
]
